--- a/welcome1.css
+++ b/welcome1.css
@@ -1,12 +1,80 @@
 @media only screen and (max-width: 768px) {
 
+  body {
+    font-family: 'Raleway', sans-serif;
+  }
+
+  .regLogForm {
+    width: 70vw;
+    height: auto;
+    padding: 0em 1em 1em 1em;
+    margin: auto;
+    margin-top:20vh;
+    border: 3px solid rgba(255,0,0,0.7);
+  }
+
+  .regLogForm input{
+    width: 70vw;
+    padding-top:2vh;
+  }
+
+  .regLogForm p{
+    width: 20vw;
+    font-size: 5vw;
+  }
+
+  .buttons {
+    position: absolute;
+    display: flex;
+    margin-top: auto;
+    margin-left:50%;
+    transform: translate(-50%,0);
+    top:0vh;
+    width: 98vw;
+
+
+  }
+
+  .buttons button {
+    font-size: 4vw;
+    display:block;
+    width:100%;
+    height:10vh;
+    margin: 2px;
+  }
+
+  .buttons .chosen {
+    border-color: rgba(30,30,30, 0.3) rgba(30,30,30, 0.3) rgba(255,0,0,0.6) rgba(30,30,30, 0.3);
+    border-width: 1px 1px 1px 1px;
+    background-color: rgba(230,26,63, 0.8);
+  }
+
+  .logo {
+    position:relative;
+    top: -3vh;
+    left:17.5%;
+    width: 45vw;
+  }
+  .center {
+    margin-left:50%;
+    transform:translate(-50%,0);
+  }
+
+  .regButton {
+    width: 60vw;
+    height: 30px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top:1em;
+    position: relative;
+  }
 
 }
 
 @media only screen and (min-width: 768px) {
 
   body {
-    font-size: 1.1vmax ;
+    font-size: 1.4vw ;
     font-family: 'Raleway', sans-serif;
   }
 
@@ -35,20 +103,25 @@
   .container1 {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 3fr 1fr 1fr;
+    grid-template-rows: 2fr 1fr;
     justify-content: center;
   }
 
   .regLogForm {
-    width: 10vw;
-    padding: 3em;
+    width: 20vw;
+    padding: 0em 3em 3em 3em;
     margin: auto;
     margin-top:50px;
     border: 3px solid rgba(255,0,0,0.7);
   }
 
   .regLogForm input{
+    width: 20vw;
+  }
+
+  .regLogForm p{
     width: 10vw;
+    font-size: 2vw;
   }
 
   .regButton {
@@ -62,9 +135,9 @@
 
   .logo {
     position:relative;
-    top: -4em;
-    left:-2vw;
-    width: 10vw;
+    top: -0.9em;
+    left:-2.5vw;
+    width: 15vw;
   }
 
   .chosen {
@@ -87,11 +160,13 @@
     margin-left:50%;
     transform:translate(-50%,0);
   }
+
   .buttons {
     margin: auto;
   }
 
   .buttons button {
+    font-size: 1.3vw;
     width: 9vw;
     height: 3em;
   }
