--- a/map.css
+++ b/map.css
@@ -1,269 +1,291 @@
 @media only screen and (max-width: 768px) {
-body {
-      font-family: 'Raleway', sans-serif;
-  }
+        body {
+              font-family: 'Raleway', sans-serif;
+          }
 
-.DisplayBlock {
-    display: block;
-  }
+        .DisplayBlock {
+            display: block;
+          }
 
-#map {
-      height: 100vh;
-      position:relative;
-      grid-area:content;
-      overflow: hidden;
-}
+        #map {
+              height: 100vh;
+              position:relative;
+              grid-area:content;
+              overflow: hidden;
+        }
 
-.menuContainer {
-    position: absolute;
-    height: 100vh;
-    width: 45vw;
-    //margin-top: 10px;
-    left:-45vw;
-    z-index:1;
+        .menuContainer {
+            position: absolute;
+            height: 100vh;
+            width: 45vw;
+            left:-45vw;
+            z-index:1;
+          }
 
-  }
-#container2, #container3, #container4 {
+        #container2, #container3, #container4 {
+          border-bottom: black solid 2px;
+          padding: 5vh 0vh 5vh 0vh;
+          margin-top: auto;
+          margin-bottom: auto;
+          width: 100%;
+        }
 
-  border-bottom: black solid 2px;
-  padding: 0px;
-  margin-top: auto;
-  margin-bottom: auto;
-}
+        .leftButtonClicked > img {
+          width: 40%;
+        }
 
-.labelAround {
-    width: 100%;
-    //margin-left: 10px;
-    //margin-right: 10px;
-  }
+        .leftButtonUnClicked > img {
+          width: 40%;
+        }
 
-.switchOnOFF {
-    width: 4em;
-    border: 0px solid;
-  }
+        .switchOnOFF {
+            width: 4em;
+            border: 0px solid;
+          }
 
-.leftMenu {
-    padding-top: 15vh;
-    width: 45vw;
-    height: 100vh;
-    background-color: rgba(255,255,255,0.6);
-    z-index:1;
-    transition: all 250ms ease-in;
-  }
+        .leftMenu {
+            padding-top: 15vh;
+            width: 100%;
+            height: 100vh;
+            background-color: rgba(255,255,255,0.6);
+            z-index:1;
+            transition: all 250ms ease-in;
+          }
 
-.leftMenuArrow {
-    position:absolute;
-    top:38vh;
-    left: 45vw;
-    width: 4vw;
-    height: 3vh;
-    z-index:1;
-  }
+        .leftMenuArrow {
+            position:absolute;
+            top:38vh;
+            left: 45vw;
+            width: 4vw;
+            height: 3vh;
+            z-index:1;
+          }
 
-.transArrow {
-    transition: all 250ms ease-out;
-  }
+        .transArrow {
+            transition: all 250ms ease-out;
+          }
 
-#arrowPic {
-    border: 0px solid white;
-    padding: 0px;
-    margin: 0px;
-    width: 30px;
-    height: 60px;
-}
+        #arrowPic {
+            border: 0px solid white;
+            padding: 0px;
+            margin: 0px;
+            width: 30px;
+            height: 60px;
+        }
 
-.logo {
-    position: absolute;
-    width: 3vw;
-    right: 40vw;
-    top: 1vh;
-    z-index:1;
-}
+        .logo {
+            position: absolute;
+            width: 3vw;
+            right: 40vw;
+            top: 1vh;
+            z-index:1;
+        }
 
-.leftButtonClicked {
-  background-color: rgba(20,20,20, 0.1);
-  color: white;
-}
+        .leftButtonClicked {
+          background-color: rgba(20,20,20, 0.1);
+          color: white;
+        }
 
-.leftButtonUnClicked {
-  background-color: rgba(0,0,0, 0.0);
-  color: black;
-}
-button {
-    margin-top: 0px;
-    padding: 0px;
-    border: 0px solid white;
-}
-button:focus, button:active {
-  outline: none;
-}
+        .leftButtonUnClicked {
+          background-color: rgba(0,0,0, 0.0);
+          color: black;
+        }
 
+        button {
+            margin-top: 0px;
+            padding: 0px;
+            border: 0px solid white;
+        }
+
+        button:focus, button:active {
+          outline: none;
+        }
 }
 
 @media only screen and (min-width: 768px) {
 
-body {
-    font-family: 'Raleway', sans-serif;
-}
+         #okButton {
+           background-image: url("green.png");
+         }
 
-#map {
-    height: 100vh;
-    position:relative;
-    grid-area:content;
-    overflow: hidden;
-}
+         #cautionButton {
+           background-image: url("yellow.png");
+         }
 
-.container {
-    display: grid;
-    grid-template-columns: 2fr 5fr;
-    grid-template-areas:
-    "head1 content"
-    "head2 content"
-    "footer content";
-    //height: 70vh;
-}
+         #supplyButton {
+           background-image: url("red.png");
+         }
 
-.movePointBtnOn {
-  border: 3px solid red;
-  padding: 6px 0px 5px 1px;
-  margin: 10px 0px 10px 0px;
-}
+          .buttonContainer {
+            margin:auto;
+            height: 70px;
+            width: 210px;
+          }
 
-.movePointBtnOff {
-  border: 3px solid grey;
-  padding: 5px 0px 5px 0px;
-  margin: 10px 0px 10px 0px;
-}
+          .pointNameEdit {
+              display:inline-block;
+              font-weight:550;
+              font-size: 1.3rem;
+              position:relative;
+              margin-left: 50%;
+              transform: translate(-50%,0);
+              padding:5px 0px 5px 0px;
+              width: auto;
+          }
 
-#okButton {
-  border: 1px solid white;
-  width: 50px;
-  height: 50px;
-  background-color: green;
-}
+          .updateButton {
+            display: inline-block;
+            background-repeat: no-repeat;
+            background-size: 70px;
+            width: 70px;
+            height: 70px;
+          }
 
-#cautionButton {
-  border: 1px solid white;
-  width: 50px;
-  height: 50px;
-  background-color: yellow;
-}
+        body {
+            font-family: 'Raleway', sans-serif;
+        }
 
-#supplyButton {
-  border: 1px solid white;
-  width: 50px;
-  height: 50px;
-  background-color:  red;
-}
+        #map {
+            height: 100vh;
+            position:relative;
+            grid-area:content;
+            overflow: hidden;
+        }
 
-.switchOnOFF {
-  width: 40px;
-  border: 0px solid;
-}
+        .container {
+            display: grid;
+            grid-template-columns: 2fr 5fr;
+            grid-template-areas:
+            "head1 content"
+            "head2 content"
+            "footer content";
+            //height: 70vh;
+        }
 
-.DisplayBlock {
-  display: block;
-}
+        .movePointBtnOn {
+          border: 3px solid red;
+          padding: 6px 0px 5px 1px;
+          margin: 10px 0px 10px 0px;
+        }
 
-.switchOnOFF:focus, .sendJSONButton:focus {
-  outline: 0;
-}
+        .movePointBtnOff {
+          border: 3px solid grey;
+          padding: 5px 0px 5px 0px;
+          margin: 10px 0px 10px 0px;
+        }
 
-.bigFont {
-  font-weight: 700;
-  text-align: center;
-}
 
-.labelAround {
-  padding: 10px;
-  width: 16vw;
-  background-color: rgba(0,0,0, 0.1);
-  margin-left: 1em;
-  margin-right: 1em;
-  border-radius: 2em;
-}
+        .switchOnOFF {
+          width: 40px;
+          border: 0px solid;
+        }
 
-.menuContainer {
-  position: absolute;
-  height: 90vh;
-  width: 25vw;
-  margin-top: 10px;
-  left:-25vw;
-  z-index:1;
-}
+        .DisplayBlock {
+          display: block;
+        }
 
-.menuContainerBigger {
-  height: 90vh;
-  transition: all 250ms ease-in;
-}
+        .switchOnOFF:focus, .sendJSONButton:focus {
+          outline: 0;
+        }
 
-.leftMenu {
-  padding-top: 5vh;
-  padding-bottom: 5vh;
-  height: 15vh;
-  width: 25vw;
-  background-color: rgba(255,255,255,0.6);
-  z-index:1;
-  transition: all 250ms ease-in;
-}
+        .labelAround {
+          padding: 10px;
+          width: 16vw;
+          background-color: rgba(0,0,0, 0.1);
+          margin-left: 1em;
+          margin-right: 1em;
+          border-radius: 2em;
+        }
 
-#container2, #container3, #container4 {
-  margin:auto;
-}
+        .menuContainer {
+          position: absolute;
+          height: 90vh;
+          width: 25vw;
+          margin-top: 10px;
+          left:-25vw;
+          z-index:1;
+        }
 
-.leftMenuArrow {
-  position:absolute;
-  top:0px;
-  left: 25vw;
-  width: 30px;
-  height: 60px;
-  z-index:1;
-}
+        .menuContainerBigger {
+          height: 90vh;
+          transition: all 250ms ease-in;
+        }
 
-.transArrow {
-  transition: all 250ms ease-out;
-}
+        .leftMenu {
+          padding-top: 5vh;
+          padding-bottom: 5vh;
+          height: auto;
+          width: 25vw;
+          background-color: rgba(255,255,255,0.6);
+          z-index:1;
+          transition: all 250ms ease-in;
+        }
 
-#arrowPic {
-  border: 0px solid white;
-  padding: 0px;
-  margin: 0px;
-  width: 30px;
-  height: 60px;
-}
+        #container2, #container3, #container4 {
+          margin:auto;
+      }
 
-.logo {
-  position: absolute;
-  width: 80px;
-  right: 110px;
-  top: 10px;
-  z-index:1;
-}
+      .leftButtonClicked > img {
+        width: 80%;
+      }
 
-.leftButtonClicked {
-  background-color: rgba(30,30,40, 0.3);
-}
+      .leftButtonUnClicked > img {
+        width: 80%;
+      }
 
-.leftButtonUnClicked {
-  background-color: rgba(0,0,0, 0);
-}
+        .leftMenuArrow {
+          position:absolute;
+          top:0px;
+          left: 25vw;
+          width: 30px;
+          height: 60px;
+          z-index:1;
+        }
 
-.redList{
-  overflow:auto;
-  height: 65vh;
-}
-.redItem{
-  display: flex;
-  height: 2em;
-  justify-content: center;
-  border-bottom: 1px solid rgba(60,60,60,0.2);
-  padding-top:1em;
-}
+        .transArrow {
+          transition: all 250ms ease-out;
+        }
 
-.redItem:hover {
-  background-color: grey;
-  transition: all 20ms;
-}
+        #arrowPic {
+          border: 0px solid white;
+          padding: 0px;
+          margin: 0px;
+          width: 30px;
+          height: 60px;
+        }
+
+        .logo {
+          position: absolute;
+          width: 80px;
+          right: 110px;
+          top: 10px;
+          z-index:1;
+        }
+
+        .leftButtonClicked {
+          background-color: rgba(30,30,40, 0.3);
+        }
+
+        .leftButtonUnClicked {
+          background-color: rgba(0,0,0, 0);
+        }
+
+        .redList{
+          overflow:auto;
+          height: 65vh;
+        }
+        .redItem{
+          display: flex;
+          height: 2em;
+          justify-content: center;
+          border-bottom: 1px solid rgba(60,60,60,0.2);
+          padding-top:1em;
+        }
+
+        .redItem:hover {
+          background-color: grey;
+          transition: all 20ms;
+        }
 
 
 }
