--- a/views/map.ejs
+++ b/views/map.ejs
@@ -3,7 +3,6 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="map.css">
-    <link rel="stylesheet" href="mapCss.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css" type="text/css">
     <meta charset="utf-8">
     <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
@@ -20,9 +19,9 @@
       <div class="leftMenu" id="leftMenu">
 
         <!--   <input type="image" src="buttonHam.png" onclick="switchOnOFF()" id="switchOnOFF" class="switchOnOFF DisplayBlock"></input><br>-->
-           <button onclick="leftButton('addButton')" id="container2" class="leftButtonUnClicked DisplayBlock bigFont labelAround" ><img src="nowyPunkt.png"></button>
-           <button onclick="leftButton('editButton')" id="container3" class="leftButtonClicked DisplayBlock bigFont labelAround"><img src="update.png"></button>
-           <button onclick="leftButton('listButton')" id="container4" class="leftButtonUnClicked DisplayBlock bigFont labelAround"><img src="braki.png"></button>
+           <button onclick="leftButton('addButton')" id="container2" class="leftButtonUnClicked DisplayBlock"><img src="nowyPunkt.png"></button>
+           <button onclick="leftButton('editButton')" id="container3" class="leftButtonClicked DisplayBlock"><img src="update.png"></button>
+           <button onclick="leftButton('listButton')" id="container4" class="leftButtonUnClicked DisplayBlock"><img src="braki.png"></button>
           <!-- load Db by click -->
           <!--<button onClick="getJSON()" id="sendJSONButton" class="DisplayBlock labelAround"> load points (file)</button> -->
 
