--- a/map.css
+++ b/map.css
@@ -14,6 +14,74 @@
               overflow: hidden;
         }
 
+        .popupEdit {
+          position:relative;
+          opacity: 0.75;
+          background-color: white;
+          padding: 5px;
+          width: 30vw;
+        }
+
+        .popupAddEl {
+          position:relative;
+          opacity: 0.8;
+          background-color: white;
+          padding: 1em;
+          width: 30vw;
+          height:auto;
+          font-size: 0.8rem;
+        }
+
+        .editButtonsContainer {
+          width: 100%;
+          position:relative;
+          margin-left: 50%;
+          margin-bottom: 1em;
+          transform: translate(-50%,0);
+        }
+
+        .addButtonsContainer {
+          width: 100%;
+          position:relative;
+
+          margin-left: 50%;
+          margin-bottom: 1em;
+          transform: translate(-50%,0);
+        }
+
+         #okButton,#addOkButton {
+           background-image: url("green.png");
+         }
+
+
+         #cautionButton,#addCautionButton {
+           background-image: url("yellow.png");
+         }
+
+         #supplyButton,#addSupplyButton{
+           background-image: url("red.png");
+         }
+
+          .pointNameEdit {
+              display:inline-block;
+              font-weight:550;
+              font-size: 1.3rem;
+              position:relative;
+              margin-left: 50%;
+              transform: translate(-50%,0);
+              padding:5px 0px 5px 0px;
+              width: auto;
+              border-bottom:1px solid black;
+          }
+
+          .updateButton {
+            display: inline-block;
+            background-repeat: no-repeat;
+            background-size: cover;
+            width: 33%;
+            height: 10vw;
+          }
+
         .menuContainer {
             position: absolute;
             height: 100vh;
@@ -76,7 +144,7 @@
         .logo {
             position: absolute;
             width: 3vw;
-            right: 40vw;
+            right: 27vw;
             top: 1vh;
             z-index:1;
         }
@@ -104,23 +172,26 @@
 
 @media only screen and (min-width: 768px) {
 
-         #okButton {
+        .addButtonsContainer {
+          width: 100%;
+          position:relative;
+          margin-left: 50%;
+          margin-bottom: 1em;
+          transform: translate(-50%,0);
+        }
+
+         #okButton,#addOkButton {
            background-image: url("green.png");
          }
 
-         #cautionButton {
+
+         #cautionButton,#addCautionButton {
            background-image: url("yellow.png");
          }
 
-         #supplyButton {
+         #supplyButton,#addSupplyButton{
            background-image: url("red.png");
          }
-
-          .buttonContainer {
-            margin:auto;
-            height: 70px;
-            width: 210px;
-          }
 
           .pointNameEdit {
               display:inline-block;
@@ -137,7 +208,7 @@
             display: inline-block;
             background-repeat: no-repeat;
             background-size: 70px;
-            width: 70px;
+            width: 33%;
             height: 70px;
           }
 
@@ -174,7 +245,6 @@
           margin: 10px 0px 10px 0px;
         }
 
-
         .switchOnOFF {
           width: 40px;
           border: 0px solid;
@@ -192,9 +262,10 @@
           padding: 10px;
           width: 16vw;
           background-color: rgba(0,0,0, 0.1);
+          border: 0;
+          border-bottom: 2px solid black;
           margin-left: 1em;
           margin-right: 1em;
-          border-radius: 2em;
         }
 
         .menuContainer {
@@ -223,15 +294,15 @@
 
         #container2, #container3, #container4 {
           margin:auto;
+          width: 100%;
+          border: 0px solid rgba(255,255,255,0.6);
+          padding: 1em;
+          border-bottom: 2px solid black;
       }
 
-      .leftButtonClicked > img {
-        width: 80%;
-      }
-
-      .leftButtonUnClicked > img {
-        width: 80%;
-      }
+        #container2 {
+        border-top: 2px solid black;
+        }
 
         .leftMenuArrow {
           position:absolute;
@@ -286,6 +357,97 @@
           background-color: grey;
           transition: all 20ms;
         }
+        .popup {
+          position:relative;
+          opacity: 0.7;
+          background-color: white;
+          padding: 5px;
+        }
 
+        .visibleOn {
+          visibility:visible;
+        }
 
+        .visibleOff {
+          visibility:hidden;
+        }
+
+        .dbContainer {
+          border: 1px dotted black;
+          background-color: grey;
+          opacity: 0.6;
+        }
+
+        .popupEdit {
+          position:relative;
+          opacity: 0.75;
+          background-color: white;
+          padding: 5px;
+          width: auto;
+        }
+
+        .popupAddEl {
+          position:relative;
+          opacity: 0.8;
+          background-color: white;
+          padding: 5px;
+          width: 30vw;
+          height:auto;
+          font-size: 0.8rem;
+        }
+
+        .addPopupOk {
+            border: 1px solid white;
+            width: 100%;
+            height: 35px;
+            background-color: #57B366;
+        }
+
+        .addPopupCaution {
+          border: 1px solid white ;
+          width: 100%;
+          height: 35px;
+          background-color: #FFE349;
+        }
+
+        .addPopupSupply {
+          border: 1px solid white ;
+          width: 100%;
+          height: 35px;
+          background-color:  #FA4B34;
+        }
+
+        .buttonClicked {
+          font-weight: 700;
+          border: 1px dotted black;
+        }
+
+        .centerDiv {
+          padding: 5px;
+          text-align: center;
+          }
+
+        .popupAddElHidden{
+          display: none;
+        }
+
+        .legend {
+          position: absolute;
+          top: 10px;
+          left: 10px;
+          padding-left: 1px;
+          padding-right:1px;
+          width: 40px;
+          height: 80px;
+          background-color:rgba(255,255,255,0.7);
+          //border: 1px solid rgba(0,0,0, 0.1);
+          z-index:1;
+          //border-radius: 10px;
+          overflow: hidden;
+        }
+        .legend:hover {
+          background-color:rgba(255,255,255,0.7);
+          width: 200px;
+          transition: all 250ms ease;
+        }
 }
