--- a/map.css
+++ b/map.css
@@ -178,6 +178,12 @@
         button:focus, button:active {
           outline: none;
         }
+        .popup {
+          position:relative;
+          opacity: 0.7;
+          background-color: white;
+          padding: 5px;
+        }
 }
 
 @media only screen and (min-width: 768px) {
