--- a/views/map.ejs
+++ b/views/map.ejs
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
     <title>OpenLayersExample</title>
+      <script type='module' src="/maps.js"> </script>
   </head>
 <body>
   <div class='map' id='map'>
@@ -34,12 +35,6 @@
   </div>
   <div id='dbContainer'> </div>
   <a href='https://embedmap.org/'>embedmap.org</a>
-  <script type='text/javascript' src="/maps.js"> </script>
-  <script type='text/module'>
-    import Feature from "ol/Feature.js";
-    import {Style, Icon} from "ol/style/js" ;
-    import Circle from "ol/geom/Circle.js";
-    import * from "ol/interaction/Modify.js";
-  </script>
+
 </body>
 </html>
